# dotnetweb

./: .gitignore
backend/: .gitignore  Program.cs  appsettings.Development.json  appsettings.json  dotnetweb.csproj  dotnetweb.sln
backend/Properties/: launchSettings.json
backend/wwwroot/: index-dacaf3eda644cadd.css  index.html  trunk-template-92d4064504707e.js  trunk-template-92d4064504707e_bg.wasm
frontend/: Cargo.toml  LICENSE-MIT  README.md  Trunk.toml  index.html  index.scss
frontend/src/: main.rs
frontend/src/comp/: mod.rs
frontend/src/comp/kryds/: feld.rs  game.rs  mod.rs  movelog.rs  quartrant.rs  rules.rs
frontend/src/func/: kryds.rs  mod.rs
frontend/src/model/: mod.rs
frontend/src/pages/: home.rs  kryds.rs  mod.rs
frontend/src/pages/auth/: login.rs  register.rs
frontend/src/pages/kryds/: bot.rs  local.rs  menu.rs  mod.rs  online.rs
frontend/src/state/: kryds.rs  mod.rs
