[package]
name = "trunk-template"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version="0.21", features=["csr"] }
yew-router = "0.18.0"
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.43"
web-sys = "0.3.70"
burn = {version="0.14.0", features=["ndarray"], default-features = false}
gloo = {version="0.11.0", features=["futures"]}
serde = {version="1.0.209", features=["derive"]}
serde-wasm-bindgen = "0.6.5"
futures = "0.3"
chrono = "0.4.38"
